--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <canvas id="game" width="500" height="600"></canvas>
 <div id="menu">
   <p>Escolha seu personagem:</p>
-  <button onclick="startGame('🚘')">🚘 Filipe Carroça</button>
+  <button onclick="startGame('🚘')">🚘 Filipe Carro</button>
   <button onclick="startGame('🏍️')">🏍️ Filipe Moto</button>
   <button onclick="startGame('🏎')">🏎 Filipe Kart Vasco</button>
 </div>
