--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ function restartGame(){
 document.addEventListener("keydown", e=>{
   if(!gameRunning) return;
   if(e.code=="ArrowLeft" && currentLane > 0) {
-    currentLane--;
+    currentLane--; Rua
     player.x = lanePositions[currentLane];
   }
   if(e.code=="ArrowRight" && currentLane < 3) {
@@ -181,7 +181,7 @@ function draw(){
   ctx.fillText("HP: "+player.hp,400,20);
   if(player.power) ctx.fillText("⭐ Invencível!",200,20);
   ctx.fillText("Velocidade: "+speed,180,50);
-  ctx.fillText("Rua: "+(currentLane+1),10,50);
+  ctx.fillText("Faixa: "+(currentLane+1),10,50);
 }
 
 function loop(){
